--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="header__plus">
                     <ul class="plus__list">
                         <li class="plus__item"><a class="menu__link" href="#"><p class="plus__text">Оформить заявку</p></a></li>
-                        <a class="plus__link" href="#">
+                    <a class="plus__link" href="#">
                             <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M17 34C26.3888 34 34 26.3888 34 17C34 7.61116 26.3888 0 17 0C7.61116 0 0 7.61116 0 17C0 26.3888 7.61116 34 17 34ZM18 16V9H16V16H9V18H16V25H18V18H25V16H18Z" fill="#213887"/>
                                 </svg>     
@@ -87,11 +87,11 @@
                 <p class="intro__subtitle">Владеешь информацией - владеешь миром</p>
 
                 <button class="button__intro">
-                    <p class="button__info">Оформить заявку
-                        <a class="plus__link2" href="#"><svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <span class="button__info">Оформить заявку
+                    <a class="plus__link2" href="#"><svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M17 34C26.3888 34 34 26.3888 34 17C34 7.61116 26.3888 0 17 0C7.61116 0 0 7.61116 0 17C0 26.3888 7.61116 34 17 34ZM18 16V9H16V16H9V18H16V25H18V18H25V16H18Z" fill="#213887"/>
-                            </svg></a></p>
-                </button>
+                            </svg></a></span>
+            </button>
             </div>
 
                 <div class="atribute">
@@ -1533,6 +1533,7 @@
                 </div> -->
 
             </div>
+        </div>
         </section>
 
         <section class="services">
@@ -1560,7 +1561,7 @@
                 <div class="services__cards">
                     <div class="services__card">
                         <div class="services__card-pic1">
-                            <img src="img/услуги фото 1.svg" alt="" class="services__card-img">
+                            <img src="img/услугифото1.svg" alt="" class="services__card-img">
                         </div>
                         <div class="services__card-text">
                         <p class="card__text">Работа c информацией</p>
@@ -1572,7 +1573,7 @@
                     </div>
                     <div class="services__card">
                         <div class="services__card-pic2">
-                            <img src="img/услуги фото 2.svg" alt="" class="services__card-img">
+                            <img src="img/услугифото2.svg" alt="" class="services__card-img">
                         </div>
                         <div class="services__card-text">
                         <p class="card__text">Розыск</p>
@@ -1582,15 +1583,15 @@
                         <p class="card__subtitle">-  Поиск имущества</p>
                         </div>
                         <button class="button__card">
-                            <p class="button__info-card">Оформить заявку
-                                <a class="plus__link3" href="#"><svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span class="button__info-card">Оформить заявку
+                        <a class="plus__link3" href="#"><svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17 34C26.3888 34 34 26.3888 34 17C34 7.61116 26.3888 0 17 0C7.61116 0 0 7.61116 0 17C0 26.3888 7.61116 34 17 34ZM18 16V9H16V16H9V18H16V25H18V18H25V16H18Z" fill="#ffffff"/>
-                                    </svg></a></p>
-                        </button>
+                                    </svg></a></span>
+                    </button>
                     </div>
                     <div class="services__card">
                         <div class="services__card-pic3">
-                            <img src="img/услуги фото 3.svg" alt="" class="services__card-img">
+                            <img src="img/услугифото3.svg" alt="" class="services__card-img">
                         </div>
                         <div class="services__card-text">
                             <p class="card__text">Слежка и наблюдение</p>
@@ -1601,7 +1602,7 @@
                     </div>
                     <div class="services__card">
                         <div class="services__card-pic4">
-                            <img src="img/услуги фото 4.svg" alt="" class="services__card-img">
+                            <img src="img/услугифото4.svg" alt="" class="services__card-img">
                         </div>
                         <div class="services__card-text">
                             <p class="card__text">Бизнес-разведка</p>
@@ -3116,7 +3117,6 @@
                 </div>
 
             </div>
-            </div>
         </section>
 
         <footer class="footer">
@@ -3157,11 +3157,15 @@
                 </div>
 
                 <div class="footer__year">2022</div>
-            </div></div>
             </div>
+        </div>
+
+            </div>
+
         </footer>
       
         </section>
+
     </main>
 </body>
 </html>
